--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -9,6 +9,7 @@
   padding:0 .5rem;
   position: fixed;
   top: 0;
+  z-index: 100;
   .header-left{
     font-size: 0.8rem;
     .wh(auto, 2.35rem);
@@ -51,5 +52,6 @@
     height: 2.35rem;
     line-height: 2.35rem;
     font-size: .9rem;
+    z-index: 100;
   }
 }
