--- a/src/pages/todothing/todolist.less
+++ b/src/pages/todothing/todolist.less
@@ -5,7 +5,7 @@ a{
 }
 
 .content{
-    height: calc(100% - 44px - 2.35rem);
+    // height: calc(100% - 44px - 2.35rem);
 }
  .todolist-item{
     margin-top:.4rem; 
