--- a/src/pages/finishthing/finishthing.less
+++ b/src/pages/finishthing/finishthing.less
@@ -1,5 +1,10 @@
-.todolist{
+.finishthing{
     /* 内容 */
+
+    a{
+        color: #000;
+    }
+
     .todolist-item{
         margin-top:.4rem; 
         background: #fff;
@@ -59,5 +64,5 @@
     }
     .pull-to-refresh-layer{
         height: 2.4rem !important;
-    }   
+    }
 }
