--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -36,6 +36,9 @@
         line-height: 2.35rem;
         margin-left: 0.5rem;
       }
+      .guanbinone{
+        display: none;
+      }
     }
   }
   .header-title{
@@ -54,4 +57,5 @@
     font-size: .9rem;
     z-index: 100;
   }
+
 }
