--- a/src/pages/notice/noticeInfo/noticeInfo.less
+++ b/src/pages/notice/noticeInfo/noticeInfo.less
@@ -1,6 +1,8 @@
 
 .media-list{
-    margin-top: 1rem
+    margin-top: 1rem;
+    padding: 0.5rem;
+    padding-top: 0;
 }
 .item-title{
     font-size: 1.1rem;
@@ -29,23 +31,18 @@
     margin-bottom: 1.39rem;
     font-size: 0.83rem;
 }
+
 .notic4{
-    width: 100%;
-    height: 1px;
-    border-top: 1px solid #ddd;
-    display: block;;
-}
-.notic5{
     height: 3.33rem;
-    // display: none;
+    border-top: 1px solid #ddd;
 }
-.notic51{
+.notic41{
     font-size: 0.83rem;
     color: #333;
     margin-top: 1.11rem;
     float: left;
 }
-.notic52{
+.notic42{
     background: #fff;
     display: block;
     float: left;
